--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     height: 100vh;
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: '#AFAFAF';
 }
 
 h1 {
