Change channel pages to a grid layout

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>yt - channel</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/channel_overview.css') }}">
 {% endblock %}
 
 {% block content %}
