made duration and view count human readable

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -10,8 +10,8 @@
         <a href="?">
             <div class="video-container">
                 <img src="{{ video.thumbnail }}" loading="lazy">
-                <p>duration: {{ video.duration }}</p>
-                <p>views: {{ video.views }}</p>
+                <p>{{ video.duration }}</p>
+                <p>{{ video.views }}</p>
                 <h2>{{ video.title }}</h2>
             </div>
         </a>
