--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -24,11 +24,6 @@
     width: 100%;
 }
 
-.video-container img {
-    max-width: 100%;
-    width: auto;
-}
-
 .video-container p {
     margin-right: auto;
     margin-left: 0.5rem;
@@ -37,4 +32,26 @@
 .video-container h2 {
     margin: 0 0.5rem 1rem;
     font-size: 1rem;
+}
+
+.thumbnail-container {
+    max-width: 21rem;
+    max-height: 11.75rem;
+    position: relative;
+}
+
+.thumbnail-container img {
+    max-width: 100%;
+    width: auto;
+}
+
+.thumbnail-container span {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+    background-color: #0007;
+    color: #fff;
+    font-weight: bolder;
 }
