--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -9,8 +9,10 @@
     {% for video in videos %}
         <a href="?">
             <div class="video-container">
-                <img src="{{ video.thumbnail }}" loading="lazy">
-                <p>{{ video.duration }}</p>
+                <div class="thumbnail-container">
+                    <img src="{{ video.thumbnail }}" loading="lazy">
+                    <span>{{ video.duration }}</span>
+                </div>
                 <p>{{ video.views }}</p>
                 <h2>{{ video.title }}</h2>
             </div>
