--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>yt - Home</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
 {% endblock %}
 
 {% block content %}
