--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -1,16 +1,90 @@
 .root-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+/* Banner */
+
+.channel-banner {
+    display: block;
+    width: calc(100% - 16rem);
+    height: fit-content;
+    margin: 1rem auto 1rem;
+    color: #111;
+}
+
+.channel-banner > img {
+    background-color: #000;
+    width: 100%;
+    min-height: 6rem;
+    border-radius: 25px;
+}
+
+.channel-banner hgroup {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: start;
+    width: calc(100% - 1rem);
+    height: 10rem;
+    column-gap: 0.5rem;
+    row-gap: 0.5rem;
+    padding: 0.5rem;
+}
+
+.channel-banner hgroup > img {
+    display: block;
+    width: 10rem;
+    height: 10rem;
+    background-color: #000;
+    border-radius: 100%;
+    margin-right: 1rem;
+}
+
+.channel-banner hgroup * {
+    margin: 0;
+}
+
+.channel-banner hgroup h1 {
+    font-size: 2.5rem;
+}
+
+.channel-banner .channel-info {
+    margin: 0;
+}
+
+.channel-banner .channel-info span::before {
+    display: inline;
+    content: " • ";
+}
+
+.channel-banner .channel-info :first-child {
+    font-weight: bolder;
+}
+
+.channel-banner .channel-info :first-child::before {
+    display: none;
+}
+
+.channel-banner .channel-description {
+    max-width: 35%;
+}
+
+/* Videos */
+
+.video-feed {
     padding: 1rem 0 0 1rem;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100vh;
     font-family: Arial, sans-serif;
     flex-flow: wrap;
-    overflow-y: scroll;
+    margin-bottom: 1rem;
 }
 
-.root-container > a {
-    width: fit-content;
+.video-feed > a {
     width: 21rem;
     margin: 0.5rem;
     align-self: stretch;
