--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -6,6 +6,22 @@
 {% endblock %}
 
 {% block content %}
+    <div class="channel-banner">
+        <img src="">
+        <hgroup>
+            <img src="">
+            <h1>Channel Name</h1>
+            <p class="channel-info">
+                <span>@channel_handle</span>
+                <span>42k subscribers</span>
+                <span>314 videos</span>
+            </p>
+            <p class="channel-description">
+                Lorem ipsum odor amet, consectetuer adipiscing elit. Lacus netus efficitur integer dapibus sit metus fermentum curabitur. Faucibus finibus mus pulvinar aptent ante nisl.
+            </p>
+        </hgroup>
+    </div>
+    <div class="video-feed">
     {% for video in videos %}
         <a href="?">
             <div class="video-container">
@@ -18,4 +34,5 @@
             </div>
         </a>
     {% endfor %}
+    </div>
 {% endblock %}
