--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -3,6 +3,7 @@
 {% block head %}
 <title>yt - channel</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/channel_overview.css') }}">
+<script defer src="{{ url_for('static', filename='scripts/read_more.js') }}"></script>
 {% endblock %}
 
 {% block content %}
