--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -17,7 +17,9 @@
                 <span>{{ channel_info.subscribers }} subscribers</span>
                 <span>{{ channel_info.num_videos }} videos</span>
             </p>
-            <p class="channel-description">{{ channel_info.description }}</p>
+            <div class="channel-description-container">
+                <p class="channel-description">{{ channel_info.description }}</p>
+            </div>
         </hgroup>
     </div>
     <div class="video-feed">
