--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -24,11 +24,11 @@
 
 .channel-banner #profile-info {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-content: start;
     width: calc(100% - 1rem);
-    height: 12rem;
+    height: fit-content;
     column-gap: 0.5rem;
     row-gap: 0.5rem;
     padding: 0.5rem;
@@ -49,12 +49,17 @@
     margin: 0;
 }
 
+.channel-banner #profile-info > div {
+    height: fit-content;
+}
+
 .channel-banner #profile-info h1 {
     font-size: 2.5rem;
 }
 
 .channel-banner .channel-info {
     margin: 0;
+    height: fit-content;
 }
 
 .channel-banner .channel-info span::before {
@@ -72,7 +77,7 @@
 
 .channel-banner .channel-description-container {
     max-width: 35%;
-    height: 50%;
+    height: fit-content;
     z-index: 5;
 }
 
