--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -24,11 +24,11 @@
 
 .channel-banner #profile-info {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    flex-direction: column;
+    flex-wrap: wrap;
     align-content: start;
     width: calc(100% - 1rem);
-    height: fit-content;
+    height: 12rem;
     column-gap: 0.5rem;
     row-gap: 0.5rem;
     padding: 0.5rem;
@@ -42,14 +42,11 @@
     background-color: #000;
     border-radius: 100%;
     margin-right: 1rem;
+    margin-bottom: 2rem;
 }
 
 .channel-banner #profile-info * {
     margin: 0;
-}
-
-.channel-banner #profile-info > div {
-    height: fit-content;
 }
 
 .channel-banner #profile-info h1 {
@@ -58,7 +55,6 @@
 
 .channel-banner .channel-info {
     margin: 0;
-    height: fit-content;
 }
 
 .channel-banner .channel-info span::before {
@@ -75,8 +71,8 @@
 }
 
 .channel-banner .channel-description-container {
-    max-width: 80%;
-    height: fit-content;
+    max-width: 35%;
+    height: 50%;
     z-index: 5;
 }
 
@@ -108,6 +104,26 @@
 
 .channel-banner .channel-description button:hover {
     text-decoration: underline 1px;
+}
+
+.channel-banner #subscribe-button {
+    width: 10rem;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 7px;
+    transition: background-color 0.1s;
+}
+
+.channel-banner #subscribe-button.subscribe {
+    background-color: #202020;
+    color: white;
+}
+
+.channel-banner #subscribe-button.subscribed {
+    background-color: #909090;
+    color: black;
 }
 
 /* Videos */
