--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -4,6 +4,7 @@
 <title>yt - channel</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/channel_overview.css') }}">
 <script defer src="{{ url_for('static', filename='scripts/read_more.js') }}"></script>
+<script defer src="{{ url_for('static', filename='scripts/videos_or_shorts.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -24,18 +25,37 @@
             </div>
         </div>
     </div>
-    <div class="video-feed">
-    {% for video in videos %}
-        <a href="?">
-            <div class="video-container">
-                <div class="thumbnail-container">
-                    <img src="{{ video.thumbnail }}" loading="lazy">
-                    <span>{{ video.duration }}</span>
+    <div class="feed-selector">
+        <button class="videos">Videos</button>
+        <button class="shorts">Shorts</button>
+    </div>
+    <div class="feed-container">
+        <div class="video-feed">
+        {% for video in videos %}
+            <a href="?">
+                <div class="video-container">
+                    <div class="thumbnail-container">
+                        <img src="{{ video.thumbnail }}" loading="lazy">
+                        <span>{{ video.duration }}</span>
+                    </div>
+                    <p>{{ video.views }}</p>
+                    <h2>{{ video.title }}</h2>
                 </div>
-                <p>{{ video.views }}</p>
-                <h2>{{ video.title }}</h2>
-            </div>
-        </a>
-    {% endfor %}
+            </a>
+        {% endfor %}
+        </div>
+        <div class="short-feed">
+        {% for short in shorts %}
+            <a href="?">
+                <div class="short-container">
+                    <img src="{{ short.thumbnail }}" loading="lazy">
+                    <div>
+                        <h2>{{ short.title }}</h2>
+                        <span>{{ short.views }}</span>
+                    </div>
+                </div>
+            </a>
+        {% endfor %}
+        </div>
     </div>
 {% endblock %}
