--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -110,6 +110,26 @@
     text-decoration: underline 1px;
 }
 
+.channel-banner #subscribe-button {
+    width: 10rem;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 7px;
+    transition: background-color 0.1s;
+}
+
+.channel-banner #subscribe-button.subscribe {
+    background-color: #202020;
+    color: white;
+}
+
+.channel-banner #subscribe-button.subscribed {
+    background-color: #909090;
+    color: black;
+}
+
 /* Videos */
 
 .video-feed {
