--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -4,6 +4,7 @@
 <title>yt - channel</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/channel_overview.css') }}">
 <script defer src="{{ url_for('static', filename='scripts/read_more.js') }}"></script>
+<script defer src="{{ url_for('static', filename='scripts/subscribe_button.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -21,6 +22,11 @@
                 <div class="channel-description-container">
                     <p class="channel-description">{{ channel_info.description }}</p>
                 </div>
+                    {% if channel_info.is_subscribed %}
+                        <button id="subscribe-button" class="subscribed">Subscribed</button>
+                    {% else %}
+                        <button id="subscribe-button" class="subscribe">Subscribe</button>
+                    {% endif %}
             </div>
         </div>
     </div>
