changed tab buttons into links

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -30,8 +30,9 @@
         </div>
     </div>
     <div class="feed-selector">
-        <button class="videos">Videos</button>
-        <button class="shorts">Shorts</button>
+        <span>
+            <a id="videos" class="active">Videos</a> | <a id="shorts">Shorts</a>
+        </span>
     </div>
     <div class="feed-container">
         <div class="video-feed">
