--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -130,22 +130,13 @@
     margin: 0.5rem auto 1.5rem;
 }
 
-.feed-selector button {
-    border: none;
-    padding: 1rem;
-    color: #000;
-    background-color: #ddd;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
-    margin: 0 0.5rem;
+.feed-selector a {
     font-size: 1.25rem;
-    font-weight: bolder;
-    border-radius: 4rem;
-    transition: 0.5s;
+    font-weight: normal;
 }
 
-.feed-selector button:disabled {
-    background-color: #fff;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
+.feed-selector a.active {
+    font-weight: bolder;
 }
 
 .channel-banner #subscribe-button {
