--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -7,6 +7,7 @@
 
 {% block content %}
     <h1>Videos:</h1>
+    <div class="video">
     {% for video in videos %}
     <div class="video-container">
         <div class="thumbnail-container">
@@ -18,19 +19,28 @@
         <h2>{{ video.title }}</h2>
         <a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">{{ video.channel_name }}</a>
         <p>{{ video.views }} views</p>
-        <p>{{ video.description }}</p>
+        {% if video.description %}
+            <p>{{ video.description }}</p>
+        {% endif %}
     </div>
     {% endfor %}
+    </div>
 
     <hr />
 
     <h1>Shorts:</h1>
+    <div class="shorts">
     {% for short in shorts %}
     <div class="short-container">
         <img src="{{ short.thumbnail }}"/>
-        <h2>{{ short.title }}</h2>
-        <a href="{{ url_for('main.channel_overview', channel_id=short.channel_id) }}">{{ short.channel_name }}</a>
-        <p>{{ short.views }} views</p>
+        <div class="short-info">
+            <h2>{{ short.title }}</h2>
+            <p>
+                <a href="{{ url_for('main.channel_overview', channel_id=short.channel_id) }}">{{ short.channel_name }}</a>
+                <span>{{ short.views }} views</span>
+            </p>
+        </div>
     </div>
     {% endfor %}
+    </div>
 {% endblock %}
