--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -9,6 +9,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    border-radius: 7px;
+    overflow: hidden;
     height: 11.75rem;
     width: calc(100% - 2rem);
     align-content: flex-start;
