--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -19,6 +19,32 @@
     box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
 }
 
+.channel-info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.channel-info img {
+    border-radius: 100%;
+    width: 2rem;
+    height: 2rem;
+    background-color: #000000;
+    object-fit: none;
+    object-position: center;
+}
+
+.channel-info a {
+    color: #000000;
+    font-size: 1.25rem;
+    text-decoration: none;
+}
+
+.channel-info a:hover {
+    text-decoration: underline;
+}
+
 /* Shorts */
 
 .shorts {
