--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -17,7 +17,10 @@
             {% endif %}
         </div>
         <h2>{{ video.title }}</h2>
-        <a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">{{ video.channel_name }}</a>
+        <div class="channel-info">
+            <img src=""/>
+            <a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">{{ video.channel_name }}</a>
+        </div>
         <p>{{ video.views }} views</p>
         {% if video.description %}
             <p>{{ video.description }}</p>
