created shorts-carousel id for element

--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -34,7 +34,7 @@
     <hr />
 
     <h1>Shorts:</h1>
-    <div class="shorts">
+    <div id="shorts-carousel">
     {% for short in shorts %}
     <div class="short-container">
         <img src="{{ short.thumbnail }}"/>
