--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -3,6 +3,7 @@
 {% block head %}
 <title>yt - search</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/search_page.css') }}">
+<script defer src="{{ url_for('static', filename='scripts/shorts_carousel.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -35,17 +36,19 @@
 
     <h1>Shorts:</h1>
     <div id="shorts-carousel">
-    {% for short in shorts %}
-    <div class="short-container">
-        <img src="{{ short.thumbnail }}"/>
-        <div class="short-info">
-            <h2>{{ short.title }}</h2>
-            <p>
-                <a href="{{ url_for('main.channel_overview', channel_id=short.channel_id) }}">{{ short.channel_name }}</a>
-                <span>{{ short.views }} views</span>
-            </p>
+        <button id="left-arrow" class="arrow">&lt;</button>
+        {% for short in shorts %}
+        <div class="short-container">
+            <img src="{{ short.thumbnail }}"/>
+            <div class="short-info">
+                <h2>{{ short.title }}</h2>
+                <p>
+                    <a href="{{ url_for('main.channel_overview', channel_id=short.channel_id) }}">{{ short.channel_name }}</a>
+                    <span>{{ short.views }} views</span>
+                </p>
+            </div>
         </div>
-    </div>
-    {% endfor %}
+        {% endfor %}
+        <button id="right-arrow" class="arrow">&gt;</button>
     </div>
 {% endblock %}
