fixed channel link

--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -21,7 +21,7 @@
         <a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">
             <div class="channel-info">
                 <img src="{{ video.channel_pic }}"/>
-                <a>{{ video.channel_name }}</a>
+                <span>{{ video.channel_name }}</span>
             </div>
         </a>
         <p>{{ video.views }} views</p>
