--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -35,13 +35,17 @@
     object-position: center;
 }
 
-.channel-info a {
-    color: #000000;
-    font-size: 1.25rem;
+.video-container a {
     text-decoration: none;
 }
 
-.channel-info a:hover {
+.channel-info span {
+    color: #000000;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.channel-info span:hover {
     text-decoration: underline;
 }
 
