--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -15,7 +15,7 @@
     width: 90%;
     align-content: flex-start;
     column-gap: 1rem;
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 5%;
     box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
 }
 
@@ -78,16 +78,12 @@
     background-color: #000b;
 }
 
-.short-info * {
-    color: #ffffff;
-    margin: 0;
-    font-size: 0.75rem;
-    font-weight: bolder;
+#shorts-carousel {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
-.short-info h2 {
-    font-size: 1rem;
-}
 
 .short-container.hidden {
     display: none;
@@ -113,6 +109,17 @@
 
 #right-arrow {
     right: 0;
+}
+
+.short-info * {
+    color: #ffffff;
+    margin: 0;
+    font-size: 0.75rem;
+    font-weight: bolder;
+}
+
+.short-info h2 {
+    font-size: 1rem;
 }
 
 .thumbnail-container {
