--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -21,7 +21,7 @@
                     <span>{{ channel_info.num_videos }} videos</span>
                 </p>
                 <div class="channel-description-container">
-                    <p class="channel-description">{{ channel_info.description }}</p>
+                    <p class="channel-description read-more">{{ channel_info.description }}</p>
                 </div>
             </div>
             {% if channel_info.is_subscribed %}
