--- a/app/static/styles/video_page.css
+++ b/app/static/styles/video_page.css
@@ -4,38 +4,11 @@
     padding: 1rem 1rem 0;
 }
 
-.video-player {
+iframe {
     width: 80vw;
     height: 45vw;
     margin: 0 1rem 1rem 0;
-    position: relative;
-}
-
-.video-player img,
-.video-player iframe {
-    width: 100%;
-    height: 100%;
     border-radius: 5px;
-}
-
-.play-button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1.5rem 4rem;
-    background-color: #f00;
-    border: 0;
-    border-radius: 1rem;
-}
-
-.play-button * {
-    content: '';
-    width: 0;
-    height: 0;
-    border: transparent solid 3rem;
-    border-right-width: 0;
-    border-left: #fff solid 5rem;
 }
 
 h1 {
