--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -9,11 +9,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="video-player">
-        <img src="{{ video.thumbnail }}">
-        <button class="play-button"><div/></button>
-        <iframe hidden src="https://www.youtube-nocookie.com/embed/{{ video.video_id }}?si=0WWbkz0vjzds1ffl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+    <iframe src="https://www.youtube-nocookie.com/embed/{{ video.video_id }}?si=0WWbkz0vjzds1ffl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h1>{{ video.title }}</h1>
     <div class="info">
         <p>{{ video.duration }}</p>
