moved shorts above videos; fixed typo in class name; added spacing above and below page

--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -3,6 +3,7 @@
 .videos {
     display: flex;
     flex-direction: column;
+    padding-bottom: 15vh;
 }
 
 .video-container {
@@ -54,6 +55,7 @@
 #shorts-carousel {
     display: flex;
     flex-direction: row;
+    margin-top: 2rem;
 }
 
 .short-container {
