--- a/app/templates/top_bar_template.html
+++ b/app/templates/top_bar_template.html
@@ -2,8 +2,8 @@
 <div class="top-bar">
     <a href="{{ url_for('main.index') }}" class="home-button">Home</a>
     <div class="search-bar">
-        <input type="text" placeholder="Search...">
-        <button>Search</button>
+        <input type="text" id="searchInput" placeholder="Search...">
+        <button id="searchButton">Search</button>
     </div>
 </div>
 
@@ -11,3 +11,4 @@
 <div class="top-bar-padding"></div>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/top_bar_template.css') }}">
+<script src="{{ url_for('static', filename='scripts/search_box.js') }}"></script>
