--- a/app/static/styles/top_bar_template.css
+++ b/app/static/styles/top_bar_template.css
@@ -18,27 +18,34 @@
 .top-bar .home-button {
     text-decoration: none;
     color: #333;
-    padding-left: 15px;
+    margin-left: 20px;
+    font-size: 1.5rem;
+    font-weight: bolder;
 }
 
 .top-bar .search-bar {
     display: flex;
     align-items: center;
-    padding-right: 25px;
+    padding-right: 20px;
 }
 
 .top-bar .search-bar input {
     font-size: 16px;
-    padding: 5px;
-    margin-right: 5px;
+    padding: 0.75rem;
+    margin-right: 10px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: inset 0 0 0.25rem 0.125rem #0002;
 }
 
 .top-bar .search-bar button {
-    padding: 5px 10px;
-    font-size: 16px;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
     cursor: pointer;
+    border: none;
+    border-radius: 20px;
 }
 
 .top-bar-padding {
-    height: 50px;
+    height: 83px;
 }
