--- a/app/static/styles/top_bar_template.css
+++ b/app/static/styles/top_bar_template.css
@@ -19,31 +19,37 @@
     text-decoration: none;
     color: #333;
     margin-left: 20px;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: bolder;
 }
 
 .top-bar .search-bar {
     display: flex;
     align-items: center;
-    padding-right: 20px;
+    margin-right: 20px;
 }
 
 .top-bar .search-bar input {
-    font-size: 16px;
-    padding: 0.75rem;
-    margin-right: 10px;
+    font-size: 1rem;
+    padding: 0.5rem;
+    padding-left: 0.75rem;
     border: none;
     border-radius: 20px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     box-shadow: inset 0 0 0.25rem 0.125rem #0002;
+    outline: 0;
 }
 
 .top-bar .search-bar button {
-    padding: 0.75rem 1rem;
+    padding: 0.5rem;
+    padding-right: 0.75rem;
     font-size: 1rem;
     cursor: pointer;
     border: none;
     border-radius: 20px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .top-bar-padding {
