Replace duration with channel link on video pages

--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -12,7 +12,7 @@
     <iframe src="https://www.youtube-nocookie.com/embed/{{ video.video_id }}?si=0WWbkz0vjzds1ffl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h1>{{ video.title }}</h1>
     <div class="info">
-        <p>{{ video.duration }}</p>
+        <p><a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">{{ video.channel_name }}</a></p>
         <p>{{ video.views }} views</p>
     </div>
     <p class="description read-more">{{ video.description }}</p>
