--- a/app/static/styles/video_page.css
+++ b/app/static/styles/video_page.css
@@ -50,3 +50,12 @@ h1 {
     display: inline;
     line-height: 1.25rem;
 }
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
