--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -155,18 +155,14 @@
     width: 100%;
 }
 
-.video-feed > a {
-    width: 21rem;
-    margin: 0.5rem;
-    align-self: stretch;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
-}
-
 .video-container {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    width: 21rem;
+    margin: 0.5rem;
+    align-self: stretch;
+    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
 }
 
 .video-container p {
@@ -174,9 +170,19 @@
     margin-left: 0.5rem;
 }
 
+.video-container a {
+    text-decoration: none;
+}
+
 .video-container h2 {
     margin: 0 0.5rem 1rem;
     font-size: 1rem;
+    color: #000;
+    text-decoration: none;
+}
+
+.video-container h2:hover {
+    text-decoration: underline;
 }
 
 .thumbnail-container {
