Add top bar to channel and video pages

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include "top_bar_template.html" %}
     <div class="channel-banner">
         <img src="{{ channel_info.banner }}">
         <div id="profile-info">
