--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "top_bar_template.html" %}
 <div class="container">
     <iframe src="https://www.youtube-nocookie.com/embed/{{ video.video_id }}?si=0WWbkz0vjzds1ffl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h1>{{ video.title }}</h1>
