--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -17,5 +17,32 @@
         <p>{{ video.views }} views</p>
     </div>
     <p class="description read-more">{{ video.description }}</p>
+
+    <div class="comments-section">
+        {% for comment in comments %}
+            <div class="comment-box">
+                <div class="comment" id="comment-{{ comment.id }}">
+                    <p>author: {{ comment.author }}</p>
+                    <p>author id: {{ comment.author_id }}</p>
+                    <p>time upload: {{ comment.time_str }}</p>
+                    <img src="{{ comment.author_thumbnail_url }}">
+                    <p>content: {{ comment.text }}</p>
+                    <p>likes: {{ comment.like_count }}</p>
+                </div>
+
+                {% for reply in comment.replies %}
+                    <div class="reply" id="comment-{{ reply.id }}">
+                        <p>This is a reply to the above comment</p>
+                        <p>author: {{ reply.author }}</p>
+                        <p>author id: {{ reply.author_id }}</p>
+                        <p>time upload: {{ reply.time_str }}</p>
+                        <img src="{{ reply.author_thumbnail_url }}">
+                        <p>content: {{ reply.text }}</p>
+                        <p>likes: {{ reply.like_count }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
