--- a/app/static/styles/video_page.css
+++ b/app/static/styles/video_page.css
@@ -59,3 +59,78 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+/* Comments */
+
+.comment-box {
+    margin-bottom: 2rem;
+    border-bottom: #0001 solid 1px;
+}
+
+.comment, .reply {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-template-rows: repeat(3, max-content);
+    grid-template-areas:
+        "pfp name" 
+        "pfp body" 
+        "pfp info";
+    margin-bottom: 1rem;
+}
+
+.reply {
+    margin-left: 5rem;
+}
+
+.comments-section {
+    padding-bottom: 2rem;
+}
+
+.comments-section h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: #0001 solid 1px;
+}
+
+.comment-box img {
+    max-width: fit-content;
+    max-height: fit-content;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100%;
+    grid-area: pfp;
+    margin-right: 1rem;
+}
+
+.comment-box .comment-author {
+    grid-area: name;
+}
+
+.comment-box .comment-author a {
+    font-weight: bolder;
+}
+
+.comment-box p {
+    grid-area: body;
+    max-width: 60vw;
+}
+
+.comment-box .comment-info {
+    grid-area: info;
+}
+
+.comment-info > * {
+    margin: 0;
+    font-weight: bolder;
+}
+
+.comment-info > *::before {
+    display: inline;
+    content: '•';
+    margin: 0 0.25rem;
+}
+
+.comment-info > :first-child::before {
+    display: none;
+    content: unset;
+}
