--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -46,7 +46,7 @@
                         {% endif %}
 
                         {% if comment.reply_count > 0 %}
-                            <a class="toggle-replies" data-reply-count="{{ comment.reply_count }}"></a>
+                            <div><a class="toggle-replies" data-reply-count="{{ comment.reply_count }}"></a></div>
                         {% endif %}
                     </div>
                 </div>
